--- a/CDJ_control.ioc
+++ b/CDJ_control.ioc
@@ -1,20 +1,19 @@
 #MicroXplorer Configuration settings - do not modify
-ADC1.Channel-8\#ChannelRegularConversion=ADC_CHANNEL_0
-ADC1.Channel-9\#ChannelRegularConversion=ADC_CHANNEL_1
+ADC1.Channel-12\#ChannelRegularConversion=ADC_CHANNEL_0
+ADC1.Channel-13\#ChannelRegularConversion=ADC_CHANNEL_1
 ADC1.ContinuousConvMode=ENABLE
 ADC1.DataAlign=ADC_DATAALIGN_RIGHT
 ADC1.DiscontinuousConvMode=DISABLE
-ADC1.EnableAnalogWatchDog=false
 ADC1.EnableRegularConversion=ENABLE
 ADC1.ExternalTrigConv=ADC_EXTERNALTRIGCONV_T1_CC1
-ADC1.IPParameters=DataAlign,ScanConvMode,ContinuousConvMode,DiscontinuousConvMode,EnableRegularConversion,InjNumberOfConversion,EnableAnalogWatchDog,master,Rank-8\#ChannelRegularConversion,Channel-8\#ChannelRegularConversion,SamplingTime-8\#ChannelRegularConversion,NbrOfConversionFlag,Rank-9\#ChannelRegularConversion,Channel-9\#ChannelRegularConversion,SamplingTime-9\#ChannelRegularConversion,NbrOfConversion,ExternalTrigConv
+ADC1.IPParameters=DataAlign,ScanConvMode,ContinuousConvMode,DiscontinuousConvMode,EnableRegularConversion,InjNumberOfConversion,master,Rank-12\#ChannelRegularConversion,Channel-12\#ChannelRegularConversion,SamplingTime-12\#ChannelRegularConversion,NbrOfConversionFlag,Rank-13\#ChannelRegularConversion,Channel-13\#ChannelRegularConversion,SamplingTime-13\#ChannelRegularConversion,NbrOfConversion,ExternalTrigConv
 ADC1.InjNumberOfConversion=0
 ADC1.NbrOfConversion=2
 ADC1.NbrOfConversionFlag=1
-ADC1.Rank-8\#ChannelRegularConversion=1
-ADC1.Rank-9\#ChannelRegularConversion=2
-ADC1.SamplingTime-8\#ChannelRegularConversion=ADC_SAMPLETIME_28CYCLES_5
-ADC1.SamplingTime-9\#ChannelRegularConversion=ADC_SAMPLETIME_28CYCLES_5
+ADC1.Rank-12\#ChannelRegularConversion=1
+ADC1.Rank-13\#ChannelRegularConversion=2
+ADC1.SamplingTime-12\#ChannelRegularConversion=ADC_SAMPLETIME_28CYCLES_5
+ADC1.SamplingTime-13\#ChannelRegularConversion=ADC_SAMPLETIME_28CYCLES_5
 ADC1.ScanConvMode=ADC_SCAN_ENABLE
 ADC1.master=1
 Dma.ADC1.0.Direction=DMA_PERIPH_TO_MEMORY
@@ -46,10 +45,10 @@ Mcu.Name=STM32F103C(8-B)Tx
 Mcu.Package=LQFP48
 Mcu.Pin0=PD0-OSC_IN
 Mcu.Pin1=PD1-OSC_OUT
-Mcu.Pin10=PB14
-Mcu.Pin11=PB15
-Mcu.Pin12=PA8
-Mcu.Pin13=PA9
+Mcu.Pin10=PB13
+Mcu.Pin11=PB14
+Mcu.Pin12=PB15
+Mcu.Pin13=PA8
 Mcu.Pin14=PA11
 Mcu.Pin15=PA12
 Mcu.Pin16=PA13
@@ -62,15 +61,16 @@ Mcu.Pin21=PB6
 Mcu.Pin22=PB7
 Mcu.Pin23=VP_SYS_VS_Systick
 Mcu.Pin24=VP_TIM1_VS_ClockSourceINT
-Mcu.Pin25=VP_USB_DEVICE_VS_USB_DEVICE_AUDIO_FS
+Mcu.Pin25=VP_TIM1_VS_no_output1
+Mcu.Pin26=VP_USB_DEVICE_VS_USB_DEVICE_AUDIO_FS
 Mcu.Pin3=PA1
 Mcu.Pin4=PA4
 Mcu.Pin5=PA5
 Mcu.Pin6=PA7
 Mcu.Pin7=PB2
 Mcu.Pin8=PB10
-Mcu.Pin9=PB13
-Mcu.PinsNb=26
+Mcu.Pin9=PB12
+Mcu.PinsNb=27
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F103CBTx
@@ -79,9 +79,6 @@ MxDb.Version=DB.5.0.1
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.DMA1_Channel1_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false
-NVIC.EXTI3_IRQn=true\:1\:0\:true\:false\:true\:true
-NVIC.EXTI4_IRQn=true\:1\:0\:true\:false\:true\:true
-NVIC.EXTI9_5_IRQn=true\:1\:0\:true\:false\:true\:true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false
@@ -90,7 +87,7 @@ NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.TIM1_CC_IRQn=true\:0\:0\:false\:false\:true\:true
-NVIC.TIM1_UP_IRQn=true\:0\:0\:false\:false\:true\:true
+NVIC.TIM4_IRQn=true\:1\:0\:true\:false\:true\:true
 NVIC.USB_LP_CAN1_RX0_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false
 PA0-WKUP.GPIOParameters=GPIO_Label
@@ -116,48 +113,45 @@ PA5.Signal=SPI1_SCK
 PA7.Mode=TX_Only_Simplex_Unidirect_Master
 PA7.Signal=SPI1_MOSI
 PA8.GPIOParameters=GPIO_Label
-PA8.GPIO_Label=S1
+PA8.GPIO_Label=S2
 PA8.Locked=true
 PA8.Signal=GPIO_Output
-PA9.GPIOParameters=GPIO_Label
-PA9.GPIO_Label=S2
-PA9.Locked=true
-PA9.Signal=GPIO_Output
 PB10.GPIOParameters=GPIO_Label
 PB10.GPIO_Label=PLAY
 PB10.Locked=true
 PB10.Signal=GPIO_Output
+PB12.GPIOParameters=GPIO_Label
+PB12.GPIO_Label=S3
+PB12.Locked=true
+PB12.Signal=GPIO_Output
 PB13.GPIOParameters=GPIO_Label
-PB13.GPIO_Label=S3
+PB13.GPIO_Label=S4
 PB13.Locked=true
 PB13.Signal=GPIO_Output
 PB14.GPIOParameters=GPIO_Label
-PB14.GPIO_Label=S4
+PB14.GPIO_Label=S5
 PB14.Locked=true
 PB14.Signal=GPIO_Output
 PB15.GPIOParameters=GPIO_Label
-PB15.GPIO_Label=S5
+PB15.GPIO_Label=S1
 PB15.Locked=true
 PB15.Signal=GPIO_Output
 PB2.GPIOParameters=GPIO_Label
 PB2.GPIO_Label=CUE
 PB2.Locked=true
 PB2.Signal=GPIO_Output
-PB3.GPIOParameters=GPIO_Label,GPIO_ModeDefaultEXTI
+PB3.GPIOParameters=GPIO_Label
 PB3.GPIO_Label=KD0
-PB3.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_RISING_FALLING
 PB3.Locked=true
-PB3.Signal=GPXTI3
-PB4.GPIOParameters=GPIO_Label,GPIO_ModeDefaultEXTI
+PB3.Signal=GPIO_Input
+PB4.GPIOParameters=GPIO_Label
 PB4.GPIO_Label=KD1
-PB4.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_RISING_FALLING
 PB4.Locked=true
-PB4.Signal=GPXTI4
-PB5.GPIOParameters=GPIO_Label,GPIO_ModeDefaultEXTI
+PB4.Signal=GPIO_Input
+PB5.GPIOParameters=GPIO_Label
 PB5.GPIO_Label=KD2
-PB5.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_RISING_FALLING
 PB5.Locked=true
-PB5.Signal=GPXTI5
+PB5.Signal=GPIO_Input
 PB6.GPIOParameters=GPIO_Label
 PB6.GPIO_Label=JOG1
 PB6.Signal=S_TIM4_CH1
@@ -203,7 +197,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=SW4STM32
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_USB_DEVICE_Init-USB_DEVICE-true-HAL-true,5-MX_ADC1_Init-ADC1-false-HAL-true,6-MX_SPI1_Init-SPI1-false-HAL-true,7-MX_TIM4_Init-TIM4-false-HAL-true,8-MX_TIM1_Init-TIM1-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-true,5-MX_ADC1_Init-ADC1-false-HAL-true,6-MX_SPI1_Init-SPI1-false-HAL-true,7-MX_TIM4_Init-TIM4-false-HAL-true,8-MX_TIM1_Init-TIM1-false-HAL-true
 RCC.ADCFreqValue=12000000
 RCC.ADCPresc=RCC_ADCPCLK2_DIV4
 RCC.AHBFreq_Value=48000000
@@ -230,12 +224,6 @@ SH.ADCx_IN0.0=ADC1_IN0,IN0
 SH.ADCx_IN0.ConfNb=1
 SH.ADCx_IN1.0=ADC1_IN1,IN1
 SH.ADCx_IN1.ConfNb=1
-SH.GPXTI3.0=GPIO_EXTI3
-SH.GPXTI3.ConfNb=1
-SH.GPXTI4.0=GPIO_EXTI4
-SH.GPXTI4.ConfNb=1
-SH.GPXTI5.0=GPIO_EXTI5
-SH.GPXTI5.ConfNb=1
 SH.S_TIM4_CH1.0=TIM4_CH1,Encoder_Interface
 SH.S_TIM4_CH1.ConfNb=1
 SH.S_TIM4_CH2.0=TIM4_CH2,Encoder_Interface
@@ -248,17 +236,19 @@ SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,VirtualNSS,BaudRa
 SPI1.Mode=SPI_MODE_MASTER
 SPI1.VirtualNSS=VM_NSSHARD
 SPI1.VirtualType=VM_MASTER
-TIM1.IPParameters=Prescaler,Period,TIM_MasterOutputTrigger,TIM_MasterSlaveMode
-TIM1.Period=4799
-TIM1.Prescaler=9
-TIM1.TIM_MasterOutputTrigger=TIM_TRGO_RESET
-TIM1.TIM_MasterSlaveMode=TIM_MASTERSLAVEMODE_DISABLE
+TIM1.Channel-Output\ Compare1\ No\ Output=TIM_CHANNEL_1
+TIM1.IPParameters=Channel-Output Compare1 No Output,TIM_MasterOutputTrigger,OCMode_1,Pulse-Output Compare1 No Output,Prescaler,Period
+TIM1.OCMode_1=TIM_OCMODE_ACTIVE
+TIM1.Period=9999
+TIM1.Prescaler=47
+TIM1.Pulse-Output\ Compare1\ No\ Output=4999
+TIM1.TIM_MasterOutputTrigger=TIM_TRGO_OC1REF
 TIM4.CounterMode=TIM_COUNTERMODE_UP
 TIM4.EncoderMode=TIM_ENCODERMODE_TI12
 TIM4.IC1Polarity=TIM_ICPOLARITY_FALLING
 TIM4.IC2Polarity=TIM_ICPOLARITY_FALLING
 TIM4.IPParameters=EncoderMode,Period,IC1Polarity,IC2Polarity,CounterMode
-TIM4.Period=65535
+TIM4.Period=100
 USB.IPParameters=low_power_enable,lpm_enable,ep0_mps
 USB.ep0_mps=DEP0CTL_MPS_8
 USB.low_power_enable=DISABLE
@@ -274,6 +264,8 @@ VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 VP_TIM1_VS_ClockSourceINT.Mode=Internal
 VP_TIM1_VS_ClockSourceINT.Signal=TIM1_VS_ClockSourceINT
+VP_TIM1_VS_no_output1.Mode=Output Compare1 No Output
+VP_TIM1_VS_no_output1.Signal=TIM1_VS_no_output1
 VP_USB_DEVICE_VS_USB_DEVICE_AUDIO_FS.Mode=AUDIO_FS
 VP_USB_DEVICE_VS_USB_DEVICE_AUDIO_FS.Signal=USB_DEVICE_VS_USB_DEVICE_AUDIO_FS
 board=custom
